--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 VITE_PUBLIC_PAGE=https://lifelineit-d5cbf.web.app
 VITE_API_URL=https://api.lifelineitinstitute.com
+# VITE_API_URL=http://localhost:5000
+
 
 # add -> /api/courses/add (POST)
 # delete -> /api/courses/delete/:route (DELETE)
