--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VITE_PUBLIC_PAGE=https://lifelineit-d5cbf.web.app
 VITE_API_URL=https://api.lifelineitinstitute.com
 # VITE_API_URL=http://localhost:5000
-
+VITE_IMGBB_KEY=8db0bdbb20cf0dcb90da48fe50bcbe38
 
 # add -> /api/courses/add (POST)
 # delete -> /api/courses/delete/:route (DELETE)
