--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-image-compression": "^2.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.3",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
