--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_PUBLIC_PAGE=https://lifelineitinstitute.com/
+VITE_PUBLIC_PAGE=https://lifelineitinstitute.com
 VITE_API_URL=https://api.lifelineitinstitute.com
 # VITE_API_URL=http://localhost:5000
 VITE_IMGBB_KEY=8db0bdbb20cf0dcb90da48fe50bcbe38
