--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.539.0",
     "match-sorter": "^8.0.3",
     "moment": "^2.30.1",
     "react": "^19.1.0",
@@ -28,7 +32,9 @@
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.22.2"
+    "sweetalert2": "^11.22.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
