--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_PUBLIC_PAGE=https://lifelineitinstitute.com
 VITE_API_URL=https://api.lifelineitinstitute.com
+VITE_API_URL_STUDENT=https://life-line-kp7lir6y7-mashayeakhs-projects.vercel.app/api/v1
 # VITE_API_URL=http://localhost:5000
 VITE_IMGBB_KEY=8db0bdbb20cf0dcb90da48fe50bcbe38
 
