--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
